2023-11-15T01:04:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6871528604 # 2041
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-15
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 145 1936 / 146 1938
* notice: next accum: outdated-unq outdated-all / unq all: 146 1938 / 147 1939
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-10-27] / [2023-11-14]

2023-10-27T08:17:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6664677694 # 1985
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 143 1934 / 145 1936
* notice: next accum: outdated-unq outdated-all / unq all: 145 1936 / 146 1938
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-11] / [2023-10-27]

2023-09-17T08:15:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6212478793 # 1865
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 142 1924 / 145 1936
* notice: next accum: outdated-unq outdated-all / unq all: 143 1934 / 145 1936
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-03] / []

2023-09-15T01:01:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6192581670 # 1858