@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-15T01:04:47Z",
-  "count_outdated" : 1938,
-  "uniques_outdated" : 146,
-  "count" : 1939,
-  "uniques" : 147,
+  "timestamp" : "2024-03-01T00:53:06Z",
+  "count_outdated" : 1939,
+  "uniques_outdated" : 147,
+  "count" : 1942,
+  "uniques" : 149,
   "views" : [
     {
-      "timestamp": "2023-11-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "timestamp": "2024-02-29T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
