@@ -1,11 +1,11 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 3,
+  "uniques": 2,
   "views": [
     {
-      "timestamp": "2023-11-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "timestamp": "2024-02-29T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
